--- a/roles/reportportal/templates/pg-preinit-configmap.yaml.j2
+++ b/roles/reportportal/templates/pg-preinit-configmap.yaml.j2
@@ -25,11 +25,10 @@ data:
     #   Series of exports to be used as 'eval' arguments
     #########################
     postgresql_archive_restic_env() {
-        default_date="$(date +"%Y-%m-%d 00:00:00")"
         cat <<"EOF"
     # S3 settings
     export RESTIC_BINARY_PATH="${RESTIC_BINARY_PATH:-/bitnami/postgresql/restic}"
-    export RESTIC_RECOVERY_TARGET_TIME="${RESTIC_RECOVERY_TARGET_TIME:-default_date}"
+    export RESTIC_RECOVERY_TARGET_TIME="${RESTIC_RECOVERY_TARGET_TIME:-$(date +"%Y-%m-%d 00:00:00")}"
     export ENABLE_RESTIC_RECOVERY="${ENABLE_RESTIC_RECOVERY:-}"
     export RESTIC_S3_BUCKET_INIT="${RESTIC_S3_BUCKET_INIT:-}"
     export RESTIC_PASSWORD="${RESTIC_PASSWORD:-}"
@@ -47,35 +46,45 @@ data:
         postgresql_info "Download restic client"
         curl https://raw.githubusercontent.com/waynesun09/reportportal-operator/master/bin/restic_0.9.6_linux_amd64 -o "$RESTIC_BINARY_PATH"
     fi
-
     postgresql_info "Update restic client with execute permission"
     chmod +x "$RESTIC_BINARY_PATH"
 
     if is_boolean_yes "$ENABLE_RESTIC_RECOVERY"; then
         # Download and restore postgresql base backup data file
-        snap_id=$(${RESTIC_BINARY_PATH} -r s3:${S3_ENDPOINT}/${S3_BUCKET_NAME} snapshots --path="${POSTGRESQL_VOLUME_DIR}/basebackup.tar.gz" | grep basebackup | awk -F' ' '{print $1}')
-        ${RESTIC_BINARY_PATH} -r s3:${S3_ENDPOINT}/${S3_BUCKET_NAME} restore $snap_id -t /tmp
-        tar -C /tmp -xzvf /tmp/${POSTGRESQL_VOLUME_DIR}/basebackup.tar.gz
+        snap_id=$(${RESTIC_BINARY_PATH} -r s3:"${S3_ENDPOINT}"/"${S3_BUCKET_NAME}" snapshots --path="${POSTGRESQL_VOLUME_DIR}/basebackup.tar.gz" | grep basebackup | awk -F' ' '{print $1}')
+        ${RESTIC_BINARY_PATH} -r s3:"${S3_ENDPOINT}"/"${S3_BUCKET_NAME}" restore "$snap_id" -t /tmp
+        tar -C /tmp -xzvf /tmp/"${POSTGRESQL_VOLUME_DIR}"/basebackup.tar.gz
         if [[ -d "${POSTGRESQL_DATA_DIR}_backup" ]]; then
             rm -rf "${POSTGRESQL_DATA_DIR}_backup"
         fi
-        mv $POSTGRESQL_DATA_DIR "${POSTGRESQL_DATA_DIR}_backup"
+        mv "$POSTGRESQL_DATA_DIR" "${POSTGRESQL_DATA_DIR}_backup"
         # rm -rf $POSTGRESQL_DATA_DIR/*
         # u_id=$(id -u)
         # chown $u_id:$u_id -R $POSTGRESQL_DATA_DIR
-        mkdir $POSTGRESQL_DATA_DIR
-        chmod -R 00700 $POSTGRESQL_DATA_DIR
-        cp -r /tmp/data/* $POSTGRESQL_VOLUME_DIR
-        chmod -R 00700 $POSTGRESQL_DATA_DIR
+        mkdir "$POSTGRESQL_DATA_DIR"
+        chmod -R 00700 "$POSTGRESQL_DATA_DIR"
+        cp -r /tmp/data/* "$POSTGRESQL_DATA_DIR"
 
         # Download all WAL snapshot files
-        snap_id=$(${RESTIC_BINARY_PATH} -r s3:${S3_ENDPOINT}/${S3_BUCKET_NAME} snapshots | grep pg_wal | awk -F' ' '{print $1}')
+        snap_id=$(${RESTIC_BINARY_PATH} -r s3:"${S3_ENDPOINT}"/"${S3_BUCKET_NAME}" snapshots | grep pg_wal | awk -F' ' '{print $1}')
+        if [[ ! -d /tmp/pg_wal ]]; then
+            mkdir /tmp/pg_wal
+        fi
+
         for i in $snap_id
         do
-            ${RESTIC_BINARY_PATH} -r s3:$S3_ENDPOINT/$S3_BUCKET_NAME restore $i -t /tmp
+            ${RESTIC_BINARY_PATH} -r s3:"$S3_ENDPOINT"/"$S3_BUCKET_NAME" restore "$i" -t /tmp/pg_wal
         done
 
-        cp -r /tmp/pg_wal "${POSTGRESQL_VOLUME_DIR}"
+        if [[ ! -d "${POSTGRESQL_VOLUME_DIR}"/pg_wal ]]; then
+            mkdir "${POSTGRESQL_VOLUME_DIR}"/pg_wal
+        fi
+
+        while IFS= read -r -d '' file
+        do
+            cp "$file" "${POSTGRESQL_VOLUME_DIR}"/pg_wal
+        done <    <(find /tmp/pg_wal/ -regex '.*/[0-9].*' -print0)
+
         rm -rf /tmp/pg_wal
 
         # Update recovery restore_command
@@ -83,13 +92,14 @@ data:
         chmod 600 "$POSTGRESQL_RECOVERY_FILE"
         postgresql_set_property "restore_command" "cp ${POSTGRESQL_VOLUME_DIR}/pg_wal/%f %p" "$POSTGRESQL_RECOVERY_FILE"
         postgresql_set_property "recovery_target_time" "$RESTIC_RECOVERY_TARGET_TIME" "$POSTGRESQL_RECOVERY_FILE"
-        mv $POSTGRESQL_RECOVERY_FILE $POSTGRESQL_VOLUME_DIR
+        mv "$POSTGRESQL_RECOVERY_FILE" "$POSTGRESQL_VOLUME_DIR"
     fi
 
     # Remove custom "$POSTGRESQL_VOLUME_DIR/.user_scripts_initialized"
     if [[ -f "$POSTGRESQL_VOLUME_DIR/.user_scripts_initialized" ]]; then
         rm -f "${POSTGRESQL_VOLUME_DIR}/.user_scripts_initialized"
     fi
+    chmod -R 00700 "$POSTGRESQL_DATA_DIR"
 kind: ConfigMap
 metadata:
   name: pg-preinit
