Add labels in es snapshot cronjob template
Add labels in template and add remove tasks with the labels in
remove role.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/es-snapshot-cronjob.yaml.j2
+++ b/roles/reportportal/templates/es-snapshot-cronjob.yaml.j2
@@ -11,6 +11,10 @@ spec:
     spec:
       template:
         spec:
+          metadata:
+            labels:
+              job: es-s3-snapshot
+              app: elasticsearch-master
           containers:
           - env:
             - name: AWS_ACCESS_KEY_ID
