Fix snapshot restore job parameter
Update parameters in CRD, fix the es_restore type with quote as
'yes' will be translated to boolean.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/es-snapshot-restore-job.yaml.j2
+++ b/roles/reportportal/templates/es-snapshot-restore-job.yaml.j2
@@ -15,9 +15,9 @@ spec:
       containers:
       - env:
         - name: ENABLE_ES_RESTORE
-          value: {{ es_restore }}
+          value: "{{ es_restore }}"
         - name: ES_RESTORE_DATE
-          value: {{ es_restore_date }}
+          value: "{{ es_restore_date }}"
         - name: AWS_ACCESS_KEY_ID
           valueFrom:
             secretKeyRef:
