Update operator-sdk base image to v0.18.2
- Update using ansible collection community.kubernetes k8s modules.
- Update build Dockerfile with install the ansible collections.
- Update CRD apiVersion to apiextensions.k8s.io/v1, v1beta1 will be
  deprecated soon.
- Update operator yaml with remove the sidecar container and add
  livenessProbe.
- Regenerate the molecule dir.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/molecule/templates/operator.yaml.j2
+++ b/molecule/templates/operator.yaml.j2
@@ -17,8 +17,8 @@ spec:
       containers:
         - name: reportportal-operator
           # Replace this with the built image name
-          image: "quay.io/waynesun09/rp5-operator:v0.0.4"
-          imagePullPolicy: "Always"
+          image: "{{ image }}"
+          imagePullPolicy: "{{ pull_policy }}"
           volumeMounts:
           - mountPath: /tmp/ansible-operator/runner
             name: runner
@@ -41,6 +41,7 @@ spec:
               port: 6789
             initialDelaySeconds: 5
             periodSeconds: 3
+
       volumes:
         - name: runner
           emptyDir: {}
