Fix elasticsearch snapshot env variables
Fix the non defined variables with default value, which does not
require define in the job YAML.

Also fix the metadata labels in cronjob job template.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/es-snapshot-restore-job.yaml.j2
+++ b/roles/reportportal/templates/es-snapshot-restore-job.yaml.j2
@@ -28,9 +28,9 @@ spec:
             secretKeyRef:
               key: s3.client.default.secret_key
               name: s3-access-key
-        - name: ELASTIC_S3_BUCKET
+        - name: ES_S3_BUCKET
           value: {{ es_snapshot_bucket }}
-        - name: ELASTIC_S3_BACKUP_DIR
+        - name: ES_S3_BACKUP_DIR
           value: {{ es_s3_backup_dir }}
         name: restore
         image: quay.io/waynesun09/ubi8-minimal:s3cmd
