--- a/roles/reportportal/templates/es-snapshot-configmap.yaml.j2
+++ b/roles/reportportal/templates/es-snapshot-configmap.yaml.j2
@@ -8,6 +8,27 @@ data:
 
 
     ########################
+    # Load variables used on elasticsearch snapshot and restore.
+    # Globals:
+    #   ES_*, AWS_*, ENABLE_ES_RESTORE
+    # Arguments:
+    #   None
+    # Returns:
+    #   Series of exports to be used as 'eval' arguments
+    #########################
+    es_snapshot_env() {
+        cat <<"EOF"
+    export ENABLE_ES_RESTORE="${ENABLE_ES_RESTORE:-no}"
+    export ES_RESTORE_DATE="${ES_RESTORE_DATE:-}"
+    export ES_S3_BUCKET="${ES_S3_BUCKET:-}"
+    export ES_S3_BACKUP_DIR="${ES_S3_BACKUP_DIR:-}"
+    export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID:-}"
+    export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY:-}"
+    EOF
+    }
+
+
+    ########################
     # Check if the provided argument is a boolean or is the string 'yes/true'
     # Arguments:
     #   $1 - Value to check
@@ -40,7 +61,7 @@ data:
     {
       "type": "s3",
       "settings": {
-        "bucket": "$ELASTIC_S3_BUCKET",
+        "bucket": "$ES_S3_BUCKET",
         "endpoint": "$1:$2",
         "protocol": "http"
       }
@@ -48,7 +69,9 @@ data:
     EOF
     }
 
-    if ! s3cmd mb --host "{{ minio_endpoint }}" --host-bucket "{{ minio_endpoint }}" --no-ssl s3://"$ELASTIC_S3_BUCKET"; then
+
+    eval "$(es_snapshot_env)"
+    if ! s3cmd mb --host "{{ minio_endpoint }}" --host-bucket "{{ minio_endpoint }}" --no-ssl s3://"$ES_S3_BUCKET"; then
         echo "Create new s3 bucket failed"
     fi
 
@@ -56,16 +79,16 @@ data:
     minio_port=$(echo "{{ minio_endpoint }}" |awk -F: '{print $3}')
     minio_ip=$(getent hosts "$minio_host" | awk '{ print $1}')
 
-    if [[ -n $ELASTIC_S3_BACKUP_DIR ]]; then
+    if [[ -n $ES_S3_BACKUP_DIR ]]; then
         # Update snapshot config each time as the minio ip might have changed
         data=$(generate_post_data "$minio_ip" "$minio_port")
-        curl -X PUT -H 'Content-Type: application/json' "http://{{ es_host }}:{{ es_port }}/_snapshot/$ELASTIC_S3_BACKUP_DIR" -d "$data"
+        curl -X PUT -H 'Content-Type: application/json' "http://{{ es_host }}:{{ es_port }}/_snapshot/$ES_S3_BACKUP_DIR" -d "$data"
 
         if is_boolean_yes "$ENABLE_ES_RESTORE"; then
             restore_date=$(echo "$ES_RESTORE_DATE" | sed 's/-/./g')
-            curl -X POST "http://{{ es_host }}:{{ es_port }}/_snapshot/$ELASTIC_S3_BACKUP_DIR/snapshot-$restore_date/_restore?wait_for_completion=true"
+            curl -X POST "http://{{ es_host }}:{{ es_port }}/_snapshot/$ES_S3_BACKUP_DIR/snapshot-$restore_date/_restore?wait_for_completion=true"
         else
-            curl -X PUT "http://{{ es_host }}:{{ es_port }}/_snapshot/$ELASTIC_S3_BACKUP_DIR/%3Csnapshot-%7Bnow%2Fd%7D%3E?wait_for_completion=true"
+            curl -X PUT "http://{{ es_host }}:{{ es_port }}/_snapshot/$ES_S3_BACKUP_DIR/%3Csnapshot-%7Bnow%2Fd%7D%3E?wait_for_completion=true"
         fi
     else
         echo "Skip as the snapshot dir is not specified"
