--- a/roles/reportportal/templates/es-snapshot-cronjob.yaml.j2
+++ b/roles/reportportal/templates/es-snapshot-cronjob.yaml.j2
@@ -10,11 +10,11 @@ spec:
   jobTemplate:
     spec:
       template:
+        metadata:
+          labels:
+            job: es-s3-snapshot
+            app: elasticsearch-master
         spec:
-          metadata:
-            labels:
-              job: es-s3-snapshot
-              app: elasticsearch-master
           containers:
           - env:
             - name: AWS_ACCESS_KEY_ID
@@ -27,9 +27,9 @@ spec:
                 secretKeyRef:
                   key: s3.client.default.secret_key
                   name: s3-access-key
-            - name: ELASTIC_S3_BUCKET
+            - name: ES_S3_BUCKET
               value: {{ es_snapshot_bucket }}
-            - name: ELASTIC_S3_BACKUP_DIR
+            - name: ES_S3_BACKUP_DIR
               value: {{ es_s3_backup_dir }}
             name: snapshot
             image: quay.io/waynesun09/ubi8-minimal:s3cmd
