--- a/roles/reportportal/templates/pg-restic-configmap.yaml.j2
+++ b/roles/reportportal/templates/pg-restic-configmap.yaml.j2
@@ -104,6 +104,7 @@ data:
         cp -r "${POSTGRESQL_DATA_DIR}" "${POSTGRESQL_BASE_BACKUP_DIR}"
 
         # Clean up the backup files
+        postgresql_info "Cleanup the base backup"
         rm -f "${POSTGRESQL_BASE_BACKUP_DIR}"/data/postmaster.* "${POSTGRESQL_BASE_BACKUP_DIR}"/data/recovery.*
         rm -rf "${POSTGRESQL_BASE_BACKUP_DIR}"/data/pg_wal/* "${POSTGRESQL_BASE_BACKUP_DIR}"/data/pg_replslot/* "${POSTGRESQL_BASE_BACKUP_DIR}"/data/pg_dynshmem/* "${POSTGRESQL_BASE_BACKUP_DIR}"/data/pg_notify/* "${POSTGRESQL_BASE_BACKUP_DIR}"/data/pg_serial/* "${POSTGRESQL_BASE_BACKUP_DIR}"/data/pg_snapshots/* "${POSTGRESQL_BASE_BACKUP_DIR}"/data/pg_stat_tmp/* "${POSTGRESQL_BASE_BACKUP_DIR}"/data/pg_subtrans/* "${POSTGRESQL_BASE_BACKUP_DIR}"/data/pgsql_tmp
         while IFS= read -r -d '' file
@@ -112,30 +113,12 @@ data:
         done <    <(find "${POSTGRESQL_BASE_BACKUP_DIR}"/data/ -name pg_internal.init -print0)
 
         # Tar zip the dir and backup with restic to s3
+        postgresql_info "Upload base backup to s3"
         tar -C "${POSTGRESQL_BASE_BACKUP_DIR}" -czvf "${POSTGRESQL_VOLUME_DIR}"/basebackup.tar.gz data
         $RESTIC_BINARY_PATH -r s3:"$S3_ENDPOINT"/"$S3_BUCKET_NAME" backup "${POSTGRESQL_VOLUME_DIR}"/basebackup.tar.gz
 
         postgresql_info "Stop pg base backup"
         echo "SELECT pg_stop_backup();" | postgresql_execute "" "postgres" "$POSTGRES_PASSWORD"
-        # counter=30
-        # while ! ls ${POSTGRESQL_DATA_DIR}/pg_wal/*.history >/dev/null 2>&1;do
-        #     sleep 10
-        #     counter=$((counter - 1 ))
-        #     if (( counter <= 0 )); then
-        #         postgresql_warn "No history file generated after base backup"
-        #         exit 1
-        #     fi
-        # done
-
-        # Create .history file if not exist
-        # timeline_base=$(echo "SELECT pg_current_wal_lsn();" | PGPASSWORD=$POSTGRES_PASSWORD psql -h localhost -p 5432 -U postgres |sed -n '3 p')
-        # echo "1     ${timeline_base}    before 2000-01-01 00:00:00+00" >/tmp/00000001.history
-        # if ! ls "${POSTGRESQL_DATA_DIR}"/pg_wal/*.history; then
-        #     file_array=$($RESTIC_BINARY_PATH -r s3:"$S3_ENDPOINT"/"$S3_BUCKET_NAME" snapshots | awk -F'/' '/pg_wal/ {print $NF}')
-        #     if [[ ! " ${file_array[*]} " =~ 00000001.history ]]; then
-        #         cp /tmp/00000001.history "${POSTGRESQL_DATA_DIR}"/pg_wal/
-        #     fi
-        # fi
     }
 
 
@@ -153,24 +136,17 @@ data:
     postgresql_info "Update archive config"
     is_boolean_yes "$ENABLE_RESTIC_BACKUP" && postgresql_configure_archive_parameters
 
-    # Copy back recovery.conf file
-    # if [[ -f ${POSTGRESQL_VOLUME_DIR}/recovery.conf ]] && is_boolean_yes "$ENABLE_RESTIC_RECOVERY"; then
-    #     mv "${POSTGRESQL_VOLUME_DIR}"/recovery.conf "$POSTGRESQL_RECOVERY_FILE"
-    #     chmod 600 "$POSTGRESQL_RECOVERY_FILE"
-    # fi
-
+    postgresql_info "Turn off hot_standby in config if recovery is enabled"
     is_boolean_yes "$ENABLE_RESTIC_RECOVERY" && postgresql_set_property "hot_standby" "off"
 
     postgresql_info "Check whether basebackup file exist on s3"
-    # Avoid shell pipeline fail with add || true
-    # TODO: Remove grep with update awk
-    output=$("${RESTIC_BINARY_PATH}" -r \
+    basebackup_id=$("${RESTIC_BINARY_PATH}" -r \
         s3:"${S3_ENDPOINT}"/"${S3_BUCKET_NAME}" snapshots |
-        grep basebackup.tar.gz || true)
-    basebackup_id=$(echo "$output" | awk -F' ' '{print $1}')
+        awk -F' ' '/basebackup.tar.gz/ {print $1}')
 
     postgresql_info "Download basebackup file from s3 if it dose not exist on local"
     if [[ ! -f ${POSTGRESQL_VOLUME_DIR}/basebackup.tar.gz ]] && [[ -n "$basebackup_id" ]]; then
+        postgresql_info "Download $basebackup_id file from s3"
         ${RESTIC_BINARY_PATH} -r s3:"$S3_ENDPOINT"/"$S3_BUCKET_NAME" restore "$basebackup_id" -t /tmp
         file=$(find /tmp -regex '.*/basebackup.tar.gz')
         if [[ -n $file ]]; then
