Update bitnami images to quay.io
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/es-metrics-deploy.yaml.j2
+++ b/roles/reportportal/templates/es-metrics-deploy.yaml.j2
@@ -22,7 +22,7 @@ spec:
       - args:
         - --es.uri=http://{{ es_host }}:{{ es_port }}
         - --es.all
-        image: docker.io/bitnami/elasticsearch-exporter:1.1.0-debian-10-r109
+        image: quay.io/bitnami/elasticsearch-exporter:1.1.0-debian-10-r109
         livenessProbe:
           failureThreshold: 3
           httpGet:
