Fix reportportal role index image variable
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/index-deployment.yaml.j2
+++ b/roles/reportportal/templates/index-deployment.yaml.j2
@@ -19,7 +19,7 @@ spec:
       - env:
         - name: K8S_MODE
           value: "true"
-        image: reportportal/service-index:5.0.7
+        image: {{ index_image }}
         name: index
         ports:
         - containerPort: 8080
