--- a/roles/reportportal/templates/openshift-gateway-deployment.yaml.j2
+++ b/roles/reportportal/templates/openshift-gateway-deployment.yaml.j2
@@ -16,7 +16,7 @@ spec:
         component: gateway
     spec:
       containers:
-        - image: 'traefik:v2.0'
+        - image: '{{ traefik_image }}'
           name: traefik
           ports:
             - containerPort: 8080
