Add composite info route
This fixes the versions are not loaded issue on UI.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/openshift-gateway-configmap.yaml.j2
+++ b/roles/reportportal/templates/openshift-gateway-configmap.yaml.j2
@@ -27,6 +27,9 @@ data:
           index-router:
             rule: "Path(`/`)"
             service: "index"
+          composite-router:
+            rule: "Path(`/composite/info`)"
+            service: "index"
           ui-router:
             rule: "PathPrefix(`/ui`)"
             middlewares:
