Add serviceaccount for rp index service
The index service need list service and pods in the cluster to
get all service versions.

The version data through /composite/info will be used on UI.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/index-deployment.yaml.j2
+++ b/roles/reportportal/templates/index-deployment.yaml.j2
@@ -15,6 +15,7 @@ spec:
       labels:
         component: index
     spec:
+      serviceAccountName: reportportal
       containers:
       - env:
         - name: K8S_MODE
