Expose s3 related related parameters
Enable set S3 gateway for minio, then the data could be saved in
S3 storage rather than the minio local storage.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/uat-deployment.yaml.j2
+++ b/roles/reportportal/templates/uat-deployment.yaml.j2
@@ -41,6 +41,14 @@ spec:
           value: {{ accesskey }}
         - name: RP_BINARYSTORE_MINIO_SECRETKEY
           value: {{ secretkey }}
+        {% if bucket_prefix|length %}
+        - name: RP_BINARYSTORE_MINIO_BUCKETPREFIX
+          value: {{ bucket_prefix }}
+        {% endif %}
+        {% if default_bucket_name|length %}
+        - name: RP_BINARYSTORE_MINIO_DEFAULTBUCKETNAME
+          value: {{ default_bucket_name }}
+        {% endif %}
         image: {{ uat_image }}
         name: uat
         ports:
