Expose s3 key config and integration salt path
Need specify the S3 accesskey and secretkey for s3 gateway.

Also add integration salt path for api and uat s3 bucket.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/uat-deployment.yaml.j2
+++ b/roles/reportportal/templates/uat-deployment.yaml.j2
@@ -49,6 +49,10 @@ spec:
         - name: RP_BINARYSTORE_MINIO_DEFAULTBUCKETNAME
           value: {{ default_bucket_name }}
         {% endif %}
+        {% if integration_salt_path|length %}
+        - name: RP_INTEGRATION_SALT_PATH
+          value: {{ integration_salt_path }}
+        {% endif %}
         image: {{ uat_image }}
         name: uat
         ports:
