--- a/roles/reportportal/templates/api-deployment.yaml.j2
+++ b/roles/reportportal/templates/api-deployment.yaml.j2
@@ -76,6 +76,10 @@ spec:
         - name: RP_BINARYSTORE_MINIO_DEFAULTBUCKETNAME
           value: {{ default_bucket_name }}
         {% endif %}
+        {% if integration_salt_path|length %}
+        - name: RP_INTEGRATION_SALT_PATH
+          value: {{ integration_salt_path }}
+        {% endif %}
         image: {{ api_image }}
         imagePullPolicy: IfNotPresent
         name: api
