Update elastic and postgres with bucket prefix
Set same bucket prefix for elastic and postgres backup.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/templates/es-snapshot-cronjob.yaml.j2
+++ b/roles/reportportal/templates/es-snapshot-cronjob.yaml.j2
@@ -28,7 +28,11 @@ spec:
                   key: s3.client.default.secret_key
                   name: s3-access-key
             - name: ES_S3_BUCKET
-              value: {{ es_snapshot_bucket }}
+{% if bucket_prefix|length %}
+              value: "{{ bucket_prefix }}{{ es_snapshot_bucket }}"
+{% else %}
+              value: "{{ es_snapshot_bucket }}"
+{% endif %}
             - name: ES_S3_BACKUP_DIR
               value: {{ es_s3_backup_dir }}
             name: snapshot
